[gd_scene load_steps=12 format=2]

[ext_resource path="res://SPRITES/screen-1.png" type="Texture" id=1]
[ext_resource path="res://SCRIPTS/computer.gd" type="Script" id=2]
[ext_resource path="res://SPRITES/back_computer-1.png" type="Texture" id=3]
[ext_resource path="res://SPRITES/turn_off_button-1.png" type="Texture" id=4]
[ext_resource path="res://SPRITES/icon_app_1.png" type="Texture" id=5]
[ext_resource path="res://SPRITES/icon_app_2-1.png" type="Texture" id=6]
[ext_resource path="res://SPRITES/Instruction Bold.otf" type="DynamicFontData" id=7]
[ext_resource path="res://SPRITES/app_3_icon.png" type="Texture" id=8]

[sub_resource type="TileSet" id=4]
0/name = "screen-1.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 7 )

[node name="computer" type="Node2D"]
script = ExtResource( 2 )

[node name="background_computer" type="Sprite" parent="."]
position = Vector2( 964.59, 557.754 )
scale = Vector2( 1.01242, 0.96133 )
texture = ExtResource( 3 )

[node name="tilemap_computer" type="TileMap" parent="."]
tile_set = SubResource( 4 )
format = 1
tile_data = PoolIntArray( 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 65542, 0, 0, 65559, 0, 0, 131078, 0, 0, 131095, 0, 0, 196614, 0, 0, 196631, 0, 0, 262150, 0, 0, 262167, 0, 0, 327686, 0, 0, 327703, 0, 0, 393222, 0, 0, 393239, 0, 0, 458758, 0, 0, 458775, 0, 0, 524294, 0, 0, 524311, 0, 0, 589830, 0, 0, 589847, 0, 0, 655366, 0, 0, 655383, 0, 0, 720902, 0, 0, 720919, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0 )

[node name="button_off" type="Button" parent="."]
margin_left = 493.748
margin_top = 767.305
margin_right = 569.748
margin_bottom = 837.305
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_app_1" type="Button" parent="."]
margin_left = 493.748
margin_top = 216.656
margin_right = 569.748
margin_bottom = 286.656
rect_scale = Vector2( 2.684, 2.684 )
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="app_1_lb" type="Label" parent="button_app_1"]
margin_left = 3.81969
margin_top = 74.2712
margin_right = 103.82
margin_bottom = 121.271
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "REGISTRADOR
  DE DATOS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_app_2" type="Button" parent="."]
margin_left = 856.0
margin_top = 216.656
margin_right = 932.0
margin_bottom = 286.656
rect_scale = Vector2( 2.684, 2.684 )
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="app_2_lb" type="Label" parent="button_app_2"]
margin_left = 5.96124
margin_top = 74.2712
margin_right = 105.961
margin_bottom = 121.271
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "	PORTAL DEL 
	 EMPLEADO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_app_3" type="Button" parent="."]
margin_left = 1216.0
margin_top = 216.656
margin_right = 1292.0
margin_bottom = 286.656
rect_scale = Vector2( 2.684, 2.684 )
icon = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="app_3_lb" type="Label" parent="button_app_3"]
margin_top = 74.2712
margin_right = 100.0
margin_bottom = 121.271
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "	ADMINISTRADOR 
  DE CASOS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="."]
margin_left = 13.8801
margin_top = 7.06177
margin_right = 79.8801
margin_bottom = 39.0618
rect_scale = Vector2( 1.92, 1.84 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="button_off" to="." method="_on_button_off_pressed"]
[connection signal="pressed" from="button_app_1" to="." method="_on_button_app_1_pressed"]
[connection signal="pressed" from="button_app_2" to="." method="_on_button_app_2_pressed"]
[connection signal="pressed" from="button_app_3" to="." method="_on_button_app_3_pressed"]
